# AiMobile

./: README.md  local.properties
app/: build.gradle
app/debug/: output.json
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tencent/scrfdncnn/: MainActivity.java  SCRFDNcnn.java
app/src/main/jni/: ASC32.H  CMakeLists.txt  HZK32.H  ReadMe.md  ast_rawosd.c  ast_rawosd.h  car_model.h  carid.h  moto_only_id.h  ndkcamera.cpp  plateid.h  platemodel_cpp.h  scrfd.cpp  scrfd.h  scrfdncnn.cpp
app/src/main/jni/ncnn-20210720-android-vulkan-shared/: ReadMe.md
app/src/main/jni/opencv-mobile-4.5.1-android/: ReadMe.md
app/src/main/res/layout/: main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
